--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
+
+ul { list-style-type: none;}
+ul,li { padding: 0; margin: 0;}
+
+body {
+    margin: 4em;
+    line-height: 1.6em;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+h1 { font-weight: 700; font-size: 3em;}
