--- a/src/app/citizens/citizen-single/citizen-single.component.html
+++ b/src/app/citizens/citizen-single/citizen-single.component.html
@@ -1,2 +1,2 @@
-<span class="citizen__name">{{ citizen.name }} ({{ citizen.age }})</span>
-<span class="citizen__job">{{ citizen.job }}</span>
+<span class="citizen__name">{{ citizen?.name }} ({{ citizen?.age }})</span>
+<span class="citizen__job">{{ citizen?.job }}</span>
