--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
-<h1>Andeby</h1>
-
-<andeby-citizen-list></andeby-citizen-list>
+<main class="wrap">
+  <h1>Andeby</h1>
+  <andeby-citizen-add></andeby-citizen-add>
+  <andeby-citizen-list></andeby-citizen-list>
+</main>
