--- a/src/app/styles/_forms.scss
+++ b/src/app/styles/_forms.scss
@@ -12,6 +12,7 @@
 
 .form-group {
   display: flex;
+  flex-direction: column;
   margin: 1em 0;
   & input {
     border: 2px solid grey;
@@ -23,4 +24,8 @@
       border-color: darkslateblue;
     }
   }
+}
+
+.alert {
+  color: red;
 }
